fix(docs): 文档修改

--- a/docs/zh-CN/components/button.mdx
+++ b/docs/zh-CN/components/button.mdx
@@ -31,7 +31,7 @@ import DemoSize from '../../demo/button/section-size.jsx'
 
 <DemoSize />
 
-## 按钮组
+## 组合按钮
 
 import DemoGroup from '../../demo/button/section-group.jsx'
 
