--- a/docs/zh-CN/components/stepper.mdx
+++ b/docs/zh-CN/components/stepper.mdx
@@ -25,23 +25,12 @@ import DemoUpDown from '../../demo/stepper/section-up-down.jsx'
 
 <DemoUpDown />
 
-## 上下结构的图标用法
-
-import DemoUpDownIcon from '../../demo/stepper/section-up-down-icon.jsx'
-
-<DemoUpDownIcon />
-
-## 竖直方向
+## 垂直用法
 
 import DemoVertical from '../../demo/stepper/section-vertical.jsx'
 
 <DemoVertical />
 
-## 竖直方向图标用法
-
-import DemoVerticalIcon from '../../demo/stepper/section-vertical-icon.jsx'
-
-<DemoVerticalIcon />
 
 ## Props
 
