--- a/docs/zh-CN/components/input.mdx
+++ b/docs/zh-CN/components/input.mdx
@@ -13,7 +13,7 @@ import DemoType from '../../demo/input/section-type.jsx'
 
 <DemoType />
 
-## 禁用状态
+## 特殊格式
 
 import DemoState from '../../demo/input/section-state.jsx'
 
