--- a/docs/zh-CN/components/radio.mdx
+++ b/docs/zh-CN/components/radio.mdx
@@ -1,4 +1,4 @@
-# Radio 单选按钮
+# Radio 单选
 
 单选按钮是用来在一组平铺选项中选择目标选项，每次只选一个
 
@@ -12,6 +12,12 @@
 import DemoNormal from '../../demo/radio/section-normal'
 
 <DemoNormal />
+
+## 垂直样式
+
+import DemoVertical from '../../demo/radio/section-vertical'
+
+<DemoVertical />
 
 ## 按钮模式
 
